src/examples/test-doubles/SetHookedPropertyMockExampleTest.php.out
./tools/phpunit tests/SetHookedPropertyMockExampleTest.php
PHPUnit 12.0-gf9a0e9f860 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.21 MB

There was 1 error:

1) SetHookedPropertyMockExampleTest::testExample
PHPUnit\Framework\MockObject\Generator\UnknownTypeException: Class or interface "InterfaceWithSetHookedProperty" does not exist

/path/to/tests/SetHookedPropertyMockExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
